--- a/src/www/main.css
+++ b/src/www/main.css
@@ -1,5 +1,6 @@
-html {
-  font-family: 'Roboto', sans-serif;
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
+*{
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 body {
@@ -8,3 +9,8 @@ body {
   margin: 0;
   padding: 0;
 }
+.react-calendar-heatmap .color-empty { fill: #f0f0f5; }
+.react-calendar-heatmap .color-scale-1 { fill: #d6e685; }
+.react-calendar-heatmap .color-scale-2 { fill: #8cc665; }
+.react-calendar-heatmap .color-scale-3 { fill: #44a340; }
+.react-calendar-heatmap .color-scale-4 { fill: #1e6823; }
